# Jni_files

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_mik_adim_jni_files_FileUtils.h  native-jni.c
app/src/main/java/com/mik/adim/jni_files/: FileUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
